fixed page scrolling so that it doesn't overlap the header

--- a/tornado-app/static/style_new.css
+++ b/tornado-app/static/style_new.css
@@ -2,6 +2,11 @@
 .mdl-layout__header-row{
   background: #ffffff;
   padding: 35px; 
+  }
+
+.mdl-layout--fixed-header {
+  position: relative;
+  z-index: 2;
 }
 
 .body-layout .mdl-layout__header {
